2012-10-01  Joseph Myers  <joseph@codesourcery.com>

	[BZ #14645]
	* sysdeps/ieee754/dbl-64/s_fma.c (__fma): Compute result as x * y
	if x * y might underflow to zero and z is zero.
	* sysdeps/ieee754/ldbl-128/s_fmal.c (__fmal): Likewise.
	* sysdeps/ieee754/ldbl-96/s_fmal.c (__fmal): Likewise.
	* math/libm-test.inc (min_subnorm_value): New variable.
	(fma_test): Add more tests.
	(fma_test_towardzero): Likewise.
	(fma_test_downward): Likewise
	(fma_test_upward): Likewise.
	(initialize): Set min_subnorm_value.

2012-09-29  Joseph Myers  <joseph@codesourcery.com>

	[BZ #14638]
	* sysdeps/ieee754/dbl-64/s_fma.c (__fma): Use x * y + z for exact
	0 + 0.
	* sysdeps/ieee754/dbl-64/s_fmaf.c (__fmaf): Use original rounding
	mode for addition resulting in exact zero.
	* sysdeps/ieee754/ldbl-128/s_fma.c (__fma): Likewise.
	* sysdeps/ieee754/ldbl-128/s_fmal.c (__fmal): Use x * y + z for
	exact 0 + 0.
	* sysdeps/ieee754/ldbl-96/s_fma.c (__fma): Likewise.
	* sysdeps/ieee754/ldbl-96/s_fmal.c (__fmal): Likewise.
	* math/libm-test.inc (fma_test): Add more tests.
	(fma_test_towardzero): New function.
	(fma_test_downward): Likewise.
	(fma_test_upward): Likewise.
	(main): Call the new functions.

2012-09-28  David S. Miller  <davem@davemloft.net>

	* sysdeps/sparc/fpu/libm-test-ulps: Fix garbage in file.

2012-09-28  Roland McGrath  <roland@hack.frob.com>

	* sysdeps/posix/sleep.c (__sleep): Rewritten using __nanosleep
	instead of SIGALRM.

	* sysdeps/gnu/_G_config.h: Moved to ...
	* sysdeps/unix/sysv/linux/_G_config.h: ... here.
	* sysdeps/mach/hurd/_G_config.h: Moved to ...
	* sysdeps/generic/_G_config.h: ... here.

	* io/open.c (__open): Renamed to __libc_open.  Make __open an alias.

	* posix/Makefile ($(objpfx)config-name.h): Do $(make-target-directory).

	* nss/Makefile ($(objpfx)/libnss_test1.so$(libnss_test1.so-version)):
	Conditionalize target on [libnss_test1.so-version].

	* elf/dl-sysdep.c: Conditionalize whole contents on [SHARED].
