@@ -1,3 +1,8 @@
+2012-09-28  Roland McGrath  <roland@hack.frob.com>
+
+	* sysdeps/unix/sysv/linux/m68k/init-first.c: Include main file from
+	csu/ rather than sysdeps/unix/sysv/linux/.
+
 2012-08-27  Joseph Myers  <joseph@codesourcery.com>
 
 	* sysdeps/unix/sysv/linux/m68k/kernel-features.h
